# happy_hacking_cxx20

./: .gitignore  CMakeLists.txt  env.cc  make-cmakelists.sh
0tmp/: ADL.cpp  CMakeLists.txt  bind.cpp  bind_ref_to_null.cc  call_a_hidden_base_class_non-virtual_method_on_a_derived_class_object.cpp  call_ctor.cc  cin_type_mismatch.cc  class_tmpl_specialization_liskov.cc  constexpr.cc  covariance_return.cc  deleted_constructor.cc  diff_call_ctor_paren_brace.cc  dtor_called_in_loop.cc  emplace_rvalue.cpp  exit_std_exit.cc  fake_arr_para.cc  function_template_specialization_expression_result_type.cc  hasinclude.cc  list_init.cc  no_take_addr_static_const_int.cc  operator-dynamic-dispatch.cpp  preprocessor_stringify.cc  pure_virtual_impl.cpp  push_derived_into_vec.cc  static_member.cc  std_getline.cc  stoi.cc  templ.cc  template_arg_deduction.cc  vector_emplace_back.cc  virtual_hidden.cpp
20utility/: 20_11_1_unique_ptr.cc  20_11_3_shared_ptr.cc  CMakeLists.txt
25algorithm/: CMakeLists.txt  rotate.cc  upper_lower_bound.cc
5lex/: 5_13_literals.cc  5_2_1_2_slash.cc  5_2_1_6_adj_strlit_concat.cc  5_3_2_universal_character_name.cc  5_5_digraph.cc  5_9_pp_number.cc  CMakeLists.txt
6basics/: 6_2_2_pure_declaration.cc  6_3_12_complete_type.cc  6_3_ODR.cc  6_7_7_tmp_obj.cc  CMakeLists.txt
util/: CMakeLists.txt  type_name.cc  type_name.h
