add_executable(bind_ref_to_null bind_ref_to_null.cc)
add_executable(cin_type_mismatch cin_type_mismatch.cc)
add_executable(diff_call_ctor_paren_brace diff_call_ctor_paren_brace.cc)
add_executable(dtor_called_in_loop dtor_called_in_loop.cc)
add_executable(exit_std_exit exit_std_exit.cc)
add_executable(fake_arr_para fake_arr_para.cc)
add_executable(hasinclude hasinclude.cc)
add_executable(preprocessor_stringify preprocessor_stringify.cc)
add_executable(std_getline std_getline.cc)
add_executable(stoi stoi.cc)
add_executable(templ templ.cc)
add_executable(static_member static_member.cc)
add_executable(no_take_addr_static_const_int no_take_addr_static_const_int.cc)
add_executable(constexpr constexpr.cc)
add_executable(list_init list_init.cc)
add_executable(call_ctor call_ctor.cc)
add_executable(vector_emplace_back vector_emplace_back.cc)
add_executable(template_T_but_get_a_ref template_arg_deduction.cc)
