add_executable(5_13_literals 5_13_literals.cc)
add_executable(5_2_1_2_slash 5_2_1_2_slash.cc)
add_executable(5_2_1_6_adj_strlit_concat 5_2_1_6_adj_strlit_concat.cc)
add_executable(5_3_2_universal_character_name 5_3_2_universal_character_name.cc)
add_executable(5_5_digraph 5_5_digraph.cc)
add_executable(5_9_pp_number 5_9_pp_number.cc)
